# maf-workshop

./: .env.sample  .gitignore  01. chat.ipynb  02. agent.ipynb  03. azure_ai.ipynb  04. mcp.ipynb  05. 0long_term_memory.ipynb  05. long_term_memory.ipynb  06. middleware.ipynb  07. observability.ipynb  08. eval.ipynb  09. sequential.ipynb  10. concurrent.ipynb  11. magentic.ipynb  12. group_chat_agent.ipynb  Financial-Advisor-Redteam-Results.json  README.md  agent.ipynb  long_term_memory.ipynb  observability.ipynb  pyproject.toml
.devcontainer/: README.md  devcontainer.json  setup.sh
